--- a/src/studio/styles/ds.module.css
+++ b/src/studio/styles/ds.module.css
@@ -307,6 +307,18 @@
   margin-left: 0.5rem;
 }
 
+.tlsplp {
+  background-color: #ff5e6d;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 8px 10px;
+  border-radius: 5px;
+  box-shadow: 1px 1px 6px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+  margin-left: 0.5rem;
+}
+
 .tlic {
   width: 12px;
   height: 12px;
