--- a/src/studio/styles/ds.module.css
+++ b/src/studio/styles/ds.module.css
@@ -105,6 +105,16 @@
   background-color: #f5f5f5;
   width: 100%;
   height: 100%;
+  flex: 1 1 auto;
+  overflow-y: auto;
+  /*
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: flex-start;
+  align-content: flex-start;
+  */
 }
 
 .sbsec {
